# Alexandria

./: .eslintrc.js  .gitignore  .gitmodules  .stylelintrc.json  .stylelintrc.yaml  LICENSE  README.md  globals.d.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: build-action.yml
docs/: Build Instructions.md  Comparison Table.md  FAQ.md
public/: defaults.css  template.html
scripts/: Download Assets.sh  Generate Assets.sh
src/: App.tsx  InitializeApp.tsx  InitializeStyles.module.scss  hooks.ts  index.tsx  migrations.js  template.html  test.module.css
src-tauri/: .gitignore  Cargo.toml  desktopTemplate.hbs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/Redux/: store.ts
src/app/: App.tsx  store.ts
src/features/: counterSlice.ts
src/routes/: Home.module.css  Home.tsx  Router.tsx  dynamic.css
src/routes/Home/: Home.module.scss  Home.tsx  dynamic.css  test.module.scss
src/routes/Home/FakeCover/: FakeCover.module.scss  (+1 more)
src/routes/Info/: Info.module.scss  Info.tsx
src/routes/OldHome/: Home.tsx
src/routes/Reader/: Reader.module.scss  Reader.tsx
src/routes/Settings/: Settings.module.scss  Settings.tsx
src/shared/components/: TitleBarButtons.module.scss  TitleBarButtons.tsx
src/shared/scripts/: TauriActions.ts  getChapterCfiMap.ts  handleLinkClick.ts
src/store/: hooks.ts  store.ts  syncedActions.ts  utlity.ts
src/store/slices/: appState.ts  appStateTypes.d.ts  bookState.ts  bookStateSlice.ts  bookStateTypes.d.ts  constants.ts  profileSlice.ts
src/utils/styles/: breakpoints.css
(+92 files in other folders)
